fixed orientation issue

--- a/MetaScan/src/main/AndroidManifest.xml
+++ b/MetaScan/src/main/AndroidManifest.xml
@@ -18,16 +18,17 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".AutoScanResultsActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <service android:name=".NewFileDetectorSvc"/>
         <receiver
